kubernetes/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srechallenge-api
  labels:
    environment: prd
    app: srechallenge-api
  namespace: srechallenge
spec:
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: srechallenge-api    
  replicas: 1
  template:
    metadata:
      labels:
        app: "srechallenge-api"
    spec:
      containers:
        - name: srechallenge-api
          image: "msnhd2/flask_docker:v1.2"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "0.5"
              memory: 200Mi
            limits:
              cpu: "0.7"
              memory: 3000Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: 5000
              scheme: HTTP
            periodSeconds: 2
            failureThreshold: 10
          ports:
            - containerPort: 5000
              name: tcp
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: tcp
              scheme: HTTP
            periodSeconds: 3
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: tcp
              scheme: HTTP
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 10
