kubernetes/app/service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: srechallenge-api-svc
  namespace: srechallenge
spec:
  type: ClusterIP
  selector:
    app: srechallenge-api
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
