kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srechallenge-ingress
  namespace: srechallenge
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: srechallenge.com
    http:
      paths:
      - backend:
          service:
            name: srechallenge-api-svc
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
